--- a/.gitignore
+++ b/.gitignore
@@ -125,3 +125,5 @@ Build/Android/res/*/*
 !Build/Android/res/*/*.png
 
 # End of https://www.toptal.com/developers/gitignore/api/unrealengine
+
+LinuxNoEditor/
